display cart products and counter

--- a/src/app/reactive-ecommerce/ecommerce.component.html
+++ b/src/app/reactive-ecommerce/ecommerce.component.html
@@ -35,6 +35,7 @@
       <a routerLink="./cart">
         <span class="material-symbols-outlined"> shopping_cart </span>
         Cart
+        <span class="counter">{{ (totalCartItems$ | async) || 0 }}</span>
       </a>
     </div>
   </div>
