--- a/src/app/reactive-ecommerce/cart/cart.component.html
+++ b/src/app/reactive-ecommerce/cart/cart.component.html
@@ -1,96 +1,79 @@
-<div class="cart">
-  <div class="cart-review">
-    <h2>Review Item And Shipping</h2>
-    <ul class="list">
-      <li class="item">
-        <div class="item-img">
-          <img
-            src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
-            alt="Product name"
-          />
-        </div>
-        <div class="item-description">
-          <div>
-            <h3>Airpods - Max</h3>
-            <small>Description</small>
+<ng-container *ngIf="cartItems$ | async as cartItems; else loading">
+  <div class="cart">
+    <div class="cart-review">
+      <h2>Review Item And Shipping</h2>
+      <ul class="list">
+        <li class="item" *ngFor="let item of cartItems">
+          <div class="item-img">
+            <img [src]="item.image" [alt]="item.title" />
           </div>
-          <div>
-            <strong>$549</strong>
-            <span>Quantity: 1</span>
+          <div class="item-description">
+            <div>
+              <h3>{{ item.title }}</h3>
+              <small>{{ item.category }}</small>
+            </div>
+            <div>
+              <strong>{{ item.price | currency }}</strong>
+              <span>Quantity: {{ item.quantity }}</span>
+            </div>
           </div>
-        </div>
-      </li>
-      <li class="item">
-        <div class="item-img">
-          <img
-            src="https://fakestoreapi.com/img/71-3HjGNDUL._AC_SY879._SX._UX._SY._UY_.jpg"
-            alt="Product name"
-          />
-        </div>
-        <div class="item-description">
-          <div>
-            <h3>Airpods - Max</h3>
-            <small>Description</small>
-          </div>
-          <div>
-            <strong>$549</strong>
-            <span>Quantity: 1</span>
-          </div>
-        </div>
-      </li>
-    </ul>
+        </li>
+      </ul>
+    </div>
+    <div class="order-summary">
+      <h2>Order Summary</h2>
+      <ul class="order-list">
+        <li class="order-item">
+          <span>Sub Total</span>
+          <strong>$549</strong>
+        </li>
+        <li class="order-item">
+          <span>Tax(10%)</span>
+          <strong>$54.90</strong>
+        </li>
+        <li class="order-item">
+          <span>Coupon Discount</span>
+          <strong>-35.00</strong>
+        </li>
+        <li class="order-item">
+          <span>Shipping Cost</span>
+          <strong>$0</strong>
+        </li>
+        <li class="order-item">
+          <span>Total</span>
+          <strong>$449</strong>
+        </li>
+      </ul>
+      <button class="pay-btn">Pay $449</button>
+    </div>
   </div>
-  <div class="order-summary">
-    <h2>Order Summary</h2>
-    <ul class="order-list">
-      <li class="order-item">
-        <span>Sub Total</span>
-        <strong>$549</strong>
-      </li>
-      <li class="order-item">
-        <span>Tax(10%)</span>
-        <strong>$54.90</strong>
-      </li>
-      <li class="order-item">
-        <span>Coupon Discount</span>
-        <strong>-35.00</strong>
-      </li>
-      <li class="order-item">
-        <span>Shipping Cost</span>
-        <strong>$0</strong>
-      </li>
-      <li class="order-item">
-        <span>Total</span>
-        <strong>$449</strong>
-      </li>
-    </ul>
-    <button class="pay-btn">Pay $449</button>
-  </div>
-</div>
+</ng-container>
 
-<div class="skeleton">
-  <div class="skeleton-review">
-    <ngx-skeleton-loader [theme]="skeleton.reviewTitle"></ngx-skeleton-loader>
-    <div class="skeleton-review-item" *ngFor="let _ of skeleton.reviewItems">
-      <div class="skeleton-review-item--left">
-        <ngx-skeleton-loader [theme]="skeleton.img"></ngx-skeleton-loader>
+<ng-template #loading>
+  <div class="skeleton">
+    <div class="skeleton-review">
+      <ngx-skeleton-loader [theme]="skeleton.reviewTitle"></ngx-skeleton-loader>
+      <div class="skeleton-review-item" *ngFor="let _ of skeleton.reviewItems">
+        <div class="skeleton-review-item--left">
+          <ngx-skeleton-loader [theme]="skeleton.img"></ngx-skeleton-loader>
+          <div>
+            <ngx-skeleton-loader [theme]="skeleton.product"></ngx-skeleton-loader>
+            <ngx-skeleton-loader [theme]="skeleton.desc"></ngx-skeleton-loader>
+          </div>
+        </div>
         <div>
-          <ngx-skeleton-loader [theme]="skeleton.product"></ngx-skeleton-loader>
-          <ngx-skeleton-loader [theme]="skeleton.desc"></ngx-skeleton-loader>
+          <ngx-skeleton-loader [theme]="skeleton.price"></ngx-skeleton-loader>
+          <ngx-skeleton-loader [theme]="skeleton.quantity"></ngx-skeleton-loader>
         </div>
       </div>
-      <div>
+    </div>
+    <div class="skeleton-order">
+      <ngx-skeleton-loader [theme]="skeleton.orderTitle"></ngx-skeleton-loader>
+      <div class="skeleton-order-item" *ngFor="let _ of skeleton.orderItems">
+        <ngx-skeleton-loader [theme]="skeleton.total"></ngx-skeleton-loader>
         <ngx-skeleton-loader [theme]="skeleton.price"></ngx-skeleton-loader>
-        <ngx-skeleton-loader [theme]="skeleton.quantity"></ngx-skeleton-loader>
       </div>
+      <ngx-skeleton-loader [theme]="skeleton.btn"></ngx-skeleton-loader>
     </div>
   </div>
-  <div class="skeleton-order">
-    <ngx-skeleton-loader [theme]="skeleton.orderTitle"></ngx-skeleton-loader>
-    <div class="skeleton-order-item" *ngFor="let _ of skeleton.orderItems">
-      <ngx-skeleton-loader [theme]="skeleton.total"></ngx-skeleton-loader>
-      <ngx-skeleton-loader [theme]="skeleton.price"></ngx-skeleton-loader>
-    </div>
-    <ngx-skeleton-loader [theme]="skeleton.btn"></ngx-skeleton-loader>
-  </div>
-</div>
+</ng-template>
