create update and remove from cart

--- a/src/app/reactive-ecommerce/cart/cart.component.html
+++ b/src/app/reactive-ecommerce/cart/cart.component.html
@@ -16,6 +16,9 @@
               <strong>{{ item.price | currency }}</strong>
               <span>Quantity: {{ item.quantity }}</span>
             </div>
+            <span class="material-symbols-outlined delete-btn" (click)="onRemove(item)">
+              remove_circle
+            </span>
           </div>
         </li>
       </ul>
