trello-clone: add tailwind forms

--- a/src/app/trello-clon/pages/login/login.component.html
+++ b/src/app/trello-clon/pages/login/login.component.html
@@ -19,6 +19,34 @@
         alt="Trello logo"
       />
     </header>
-    <div class="bg-white rounded shadow"></div>
+    <div class="bg-white rounded shadow py-4 px-6">
+      <div class="mb-4">
+        <h1 class="text-center font-semibold pt-4 pb-8">Log In to Trello</h1>
+        <form novalidate class="space-y-4">
+          <div class="relative">
+            <input
+              type="email"
+              class="w-full rounded bg-gray-100 border-2 border-gray-300"
+              placeholder="Enter email"
+            />
+          </div>
+          <div class="relative">
+            <input
+              type="password"
+              class="w-full rounded bg-gray-100 border-2 border-gray-300"
+              placeholder="Enter email"
+            />
+          </div>
+          <div>
+            <button
+              type="submit"
+              class="text-white bg-green-700 px-5 py-2 w-full font-medium rounded text-sm"
+            >
+              Log In
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
