--- a/src/app/trello-clon/pages/login/login.component.html
+++ b/src/app/trello-clon/pages/login/login.component.html
@@ -38,12 +38,7 @@
             />
           </div>
           <div>
-            <button
-              type="submit"
-              class="text-white bg-green-700 px-5 py-2 w-full font-medium rounded text-sm"
-            >
-              Log In
-            </button>
+            <app-btn btnType="submit">Log In</app-btn>
           </div>
         </form>
       </div>
