--- a/src/app/trello-clon/components/navbar/navbar.component.html
+++ b/src/app/trello-clon/components/navbar/navbar.component.html
@@ -24,6 +24,9 @@
       </div>
     </div>
     <div class="flex items-center">
+      <button class="text-white mr-4">
+        <fa-icon [icon]="faBell"></fa-icon>
+      </button>
       <button
         type="button"
         class="flex rounded-full"
