trello-clone: add accordion

--- a/src/app/trello-clon/pages/boards/boards.component.html
+++ b/src/app/trello-clon/pages/boards/boards.component.html
@@ -1,2 +1,12 @@
 <app-navbar></app-navbar>
-<p>boards works!</p>
+
+<cdk-accordion>
+  <cdk-accordion-item #accordionMenu="cdkAccordionItem">
+    <button (click)="accordionMenu.toggle()">My workspace</button>
+    <div class="transition-all" [style.display]="accordionMenu.expanded ? '' : 'none'">
+      Panel
+      <p>Hola</p>
+      <p>Mundo</p>
+    </div>
+  </cdk-accordion-item>
+</cdk-accordion>
