--- a/src/app/styling-components/components/navigation/pills/pills.component.html
+++ b/src/app/styling-components/components/navigation/pills/pills.component.html
@@ -2,18 +2,13 @@
   <li
     *ngFor="let pill of pills; let i = index"
     class="item"
-    [ngClass]="
-      pill.label || (!selectedPill && i === 0)
-        ? 'item--selected'
-        : 'item--unselected'
-    "
+    [ngClass]="pill.label || (!selectedPill && i === 0) ? 'item--selected' : 'item--unselected'"
   >
     <a
       (click)="togglePill(pill)"
       class="item__link"
       [ngClass]="{
-        'item__link--selected':
-          selectedPill?.label === pill.label || (!selectedPill && i === 0)
+        'item__link--selected': selectedPill?.label === pill.label || (!selectedPill && i === 0)
       }"
     >
       {{ pill.label }}
