--- a/src/app/trello-clon/modules/auth/pages/auth/auth.component.html
+++ b/src/app/trello-clon/modules/auth/pages/auth/auth.component.html
@@ -1,1 +1,7 @@
-<p>auth works!</p>
+<div class="w-screen h-screen bg-white sm:bg-gray-50 relative">
+<app-home-background />
+  <div class="flex flex-col justify-between w-full h-full sm:w-7/12 md:w-6/12 lg:w-4/12 m-auto">
+    <app-header />
+  <app-footer />
+  </div>
+</div>
