--- a/src/app/trello-clon/modules/auth/components/header/header.component.html
+++ b/src/app/trello-clon/modules/auth/components/header/header.component.html
@@ -1,7 +1,7 @@
-<header class="py-4 flex justify-center">
+<header class="mt-20 flex justify-center">
   <img
     loading="lazy"
-    class="w-56 md:w-60"
+    class="w-52"
     src="/assets/images/trello/logo-gradient-blue-trello.png"
     alt="Trello Logo"
   />
