--- a/src/app/trello-clon/modules/auth/pages/auth/auth.component.html
+++ b/src/app/trello-clon/modules/auth/pages/auth/auth.component.html
@@ -1,13 +1,13 @@
 <div class="w-screen h-screen bg-white sm:bg-gray-50 relative">
   <app-home-background />
-  <div class="flex flex-col justify-between w-full h-full sm:w-7/12 md:w-6/12 lg:w-4/12 m-auto">
+  <div class="flex flex-col justify-between w-full h-full sm:w-7/12 md:w-6/12 lg:w-[420px] m-auto relative">
     <app-header />
-    <div class="bg-white rounded shadow-none sm:shadow-lg py-4 px-4 md:px-9">
+    <div class="bg-white rounded shadow-none sm:shadow-lg py-8 px-4 md:px-9">
       <div class='mb-4'>
         <router-outlet />
       </div>
-      <hr class="my-4 border-b-1 border-r-gray-300" />
     </div>
     <app-footer />
   </div>
+
 </div>
