--- a/src/app/trello-clon/shared/components/navbar/navbar.component.html
+++ b/src/app/trello-clon/shared/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <img
           loading="lazy"
           class="w-20 mr-8"
-          src="/assets/images/trello/logo-gradient-white-trello.png"
+          src='/src/assets/images/trello/logo-gradient-white-trello.png'
           alt="logo"
         />
       </a>
