--- a/src/app/trello-clon/modules/auth/pages/auth/auth.component.html
+++ b/src/app/trello-clon/modules/auth/pages/auth/auth.component.html
@@ -2,12 +2,9 @@
   <app-home-background />
   <div class="flex flex-col justify-between w-full h-full sm:w-7/12 md:w-6/12 lg:w-[420px] m-auto relative">
     <app-header />
-    <div class="bg-white rounded shadow-none sm:shadow-lg py-8 px-4 md:px-9">
-      <div class='mb-4'>
+    <div class="bg-white rounded shadow-none sm:shadow-lg py-8 px-4 md:px-9 mb-20">
         <router-outlet />
-      </div>
     </div>
     <app-footer />
   </div>
-
 </div>
