--- a/src/app/trello-clon/shared/components/btn/btn.component.html
+++ b/src/app/trello-clon/shared/components/btn/btn.component.html
@@ -1,6 +1,16 @@
 <button
-  [type]="btnType"
-  class="text-white bg-success-700 px-5 py-2 w-full font-medium rounded text-sm"
+  [type]="type"
+  [disabled]="disabled || loading"
+  [ngClass]="colors"
+  class="w-full rounded text-sm px-5 py-3 font-semibold"
 >
-  <ng-content></ng-content>
+  <fa-icon
+    *ngIf="loading"
+    class="mr-2"
+    [icon]="faSpinner"
+    [pulse]="true"
+  ></fa-icon>
+  <ng-container *ngIf='!loading'>
+    <ng-content></ng-content>
+  </ng-container>
 </button>
