--- a/src/app/trello-clon/shared/components/btn/btn.component.html
+++ b/src/app/trello-clon/shared/components/btn/btn.component.html
@@ -2,7 +2,7 @@
   [type]="type"
   [disabled]="disabled || loading"
   [ngClass]="colors"
-  class="w-full rounded text-sm px-5 py-3 font-semibold"
+  class="w-full rounded text-sm px-5 py-3 font-semibold transition"
 >
   <fa-icon
     *ngIf="loading"
