add forgot-password component

--- a/src/app/trello-clon/modules/auth/pages/login/login.component.html
+++ b/src/app/trello-clon/modules/auth/pages/login/login.component.html
@@ -59,11 +59,11 @@
 </form>
 <div class="text-center border-t border-t-gray-300 mt-6 pt-6">
   <a
-    routerLink="/forgot-password"
+    routerLink="/trello-clone/forgot-password"
     class="text-sm text-blue-600 font-light block mb-2 cursor-pointer hover:underline"
     >¿No puede iniciar sesión?</a
   >
-  <a routerLink="/register" class="text-sm text-blue-600 font-light cursor-pointer hover:underline"
+  <a routerLink="/trello-clone/register" class="text-sm text-blue-600 font-light cursor-pointer hover:underline"
     >Regístrese para crear una cuenta</a
   >
 </div>
