--- a/src/app/trello-clon/modules/auth/pages/forgot-password/forgot-password.component.html
+++ b/src/app/trello-clon/modules/auth/pages/forgot-password/forgot-password.component.html
@@ -1,17 +1,12 @@
 <h1 class="text-center font-bold py-2 text-slate-500 mb-6">¿No puede iniciar sesión?</h1>
-<div *ngIf='emailSent'>
+<div *ngIf="emailSent">
   <div class="flex justify-center py-4">
-    <img
-      loading="lazy"
-      class="w-40"
-      src="/assets/images/trello/check-email.svg"
-      alt="Email sent"
-    />
+    <img loading="lazy" class="w-40" src="/assets/images/trello/check-email.svg" alt="Email sent" />
   </div>
-  <p class='text-center'>Le hemos enviado un enlace de recuperación a</p>
-  <p class="font-bold text-center">{{form.controls.email.value}}</p>
+  <p class="text-center">Le hemos enviado un enlace de recuperación a</p>
+  <p class="font-bold text-center">{{ form.controls.email.value }}</p>
 </div>
-<form *ngIf='!emailSent' [formGroup]="form" novalidate (ngSubmit)="sendLink()" class="space-y-6">
+<form *ngIf="!emailSent" [formGroup]="form" novalidate (ngSubmit)="sendLink()" class="space-y-6">
   <div>
     <div class="relative">
       <input
@@ -40,10 +35,14 @@
       </p>
     </div>
   </div>
-  <app-btn type="submit" [loading]="status === 'loading'" color='success' class="w-full">Continuar</app-btn>
+  <app-btn type="submit" [loading]="status === 'loading'" color="success" class="w-full"
+    >Continuar</app-btn
+  >
 </form>
 <div class="text-center border-t border-t-gray-300 mt-6 pt-6">
-  <a routerLink="/trello-clone" class="text-sm text-blue-600 font-light cursor-pointer hover:underline"
-  >Volver al inicio sesión</a
+  <a
+    routerLink="/trello-clone"
+    class="text-sm text-blue-600 font-light cursor-pointer hover:underline"
+    >Volver al inicio sesión</a
   >
 </div>
