--- a/src/app/trello-clon/modules/auth/pages/recovery/recovery.component.html
+++ b/src/app/trello-clon/modules/auth/pages/recovery/recovery.component.html
@@ -46,13 +46,9 @@
       >
         Este campo es requerido
       </p>
-
     </div>
-    <div  *ngIf="form.controls.confirmPassword.touched">
-      <p
-        *ngIf="form.hasError('mismatch')"
-        class="font-medium text-red-500 text-xs mt-1 ml-1"
-      >
+    <div *ngIf="form.controls.confirmPassword.touched">
+      <p *ngIf="form.hasError('mismatch')" class="font-medium text-red-500 text-xs mt-1 ml-1">
         La contraseña no coincide
       </p>
     </div>
