--- a/src/app/trello-clon/modules/auth/pages/login/login.component.html
+++ b/src/app/trello-clon/modules/auth/pages/login/login.component.html
@@ -55,7 +55,9 @@
       </p>
     </div>
   </div>
-  <app-btn type="submit" [loading]="status === 'loading'" color='success' class="w-full">Continuar</app-btn>
+  <app-btn type="submit" [loading]="status === 'loading'" color="success" class="w-full"
+    >Continuar</app-btn
+  >
 </form>
 <div class="text-center border-t border-t-gray-300 mt-6 pt-6">
   <a
@@ -63,7 +65,9 @@
     class="text-sm text-blue-600 font-light block mb-2 cursor-pointer hover:underline"
     >¿No puede iniciar sesión?</a
   >
-  <a routerLink="/trello-clone/register" class="text-sm text-blue-600 font-light cursor-pointer hover:underline"
+  <a
+    routerLink="/trello-clone/register"
+    class="text-sm text-blue-600 font-light cursor-pointer hover:underline"
     >Regístrese para crear una cuenta</a
   >
 </div>
