--- a/src/app/trello-clon/modules/auth/pages/login/login.component.html
+++ b/src/app/trello-clon/modules/auth/pages/login/login.component.html
@@ -1,9 +1,7 @@
 <h1 class="text-center font-bold py-2 text-slate-500 mb-6">Iniciar sesión en Trello</h1>
 <form [formGroup]="form" novalidate (ngSubmit)="login()" class="space-y-6">
   <div *ngIf="status === 'error'">
-    <p
-      class="font-medium text-red-500 text-xs mt-1 ml-1"
-    >
+    <p class="font-medium text-red-500 text-xs mt-1 ml-1">
       El correo o la contraseña son inválidos.
     </p>
   </div>
