--- a/src/app/trello-clon/modules/auth/pages/register/register.component.html
+++ b/src/app/trello-clon/modules/auth/pages/register/register.component.html
@@ -1,5 +1,11 @@
 <h1 class="text-center font-bold py-2 text-slate-500 mb-6">Regístrate para crear una cuenta</h1>
-<form *ngIf="statusValidateEmail !== 'success'" [formGroup]='formValidateEmail' novalidate class="space-y-6" (ngSubmit)="validateEmail()">
+<form
+  *ngIf="statusValidateEmail !== 'success'"
+  [formGroup]="formValidateEmail"
+  novalidate
+  class="space-y-6"
+  (ngSubmit)="validateEmail()"
+>
   <div>
     <div class="relative">
       <input
@@ -28,11 +34,21 @@
       </p>
     </div>
   </div>
-  <app-btn type="submit" [loading]="statusValidateEmail === 'loading'" color="success" class="w-full"
-  >Continuar</app-btn
+  <app-btn
+    type="submit"
+    [loading]="statusValidateEmail === 'loading'"
+    color="success"
+    class="w-full"
+    >Continuar</app-btn
   >
 </form>
-<form *ngIf="statusValidateEmail ==='success'" [formGroup]="form" novalidate class="space-y-6" (ngSubmit)="register()">
+<form
+  *ngIf="statusValidateEmail === 'success'"
+  [formGroup]="form"
+  novalidate
+  class="space-y-6"
+  (ngSubmit)="register()"
+>
   <div>
     <div class="relative">
       <input
