create data table markup

--- a/src/app/standalone/data-table/data-table.component.html
+++ b/src/app/standalone/data-table/data-table.component.html
@@ -1,1 +1,28 @@
-<p>data-table works!</p>
+<section>
+  <header>
+    <h1>Data table</h1>
+    <form>
+      <input type="text" placeholder="Buscar" />
+    </form>
+  </header>
+  <aside>
+    <span>Calendario</span>
+    <span>Dropdown con filtros</span>
+  </aside>
+  <table>
+    <thead>
+    <tr>
+      <th>Id</th>
+      <th>Nombre</th>
+      <th>Tipo</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td>1</td>
+      <td>David</td>
+      <td>Manager</td>
+    </tr>
+    </tbody>
+  </table>
+</section>
