--- a/marvel-heroes/src/app/app.component.html
+++ b/marvel-heroes/src/app/app.component.html
@@ -1,3 +1,4 @@
-<main class='w-screen h-screen flex flex-col items-center justify-center'>
+<main class='w-screen h-screen flex flex-col items-center'>
   <h1 class='text-4xl mb-10'>Marvel Heroes</h1>
+  <app-hero-grid />
 </main>
