style(marvel-heroes): add grid and colors

--- a/marvel-heroes/src/app/app.component.html
+++ b/marvel-heroes/src/app/app.component.html
@@ -1,4 +1,4 @@
 <main class='w-screen h-screen flex flex-col items-center'>
-  <h1 class='text-4xl mb-10'>Marvel Heroes</h1>
+  <h1 class='bg-red-500 text-white text-4xl w-full p-3'>Marvel Heroes</h1>
   <app-hero-grid />
 </main>
