--- a/marvel-heroes/src/app/components/hero-card/hero-card.component.html
+++ b/marvel-heroes/src/app/components/hero-card/hero-card.component.html
@@ -1,4 +1,4 @@
-<div *ngIf='hero'>
-  <img [src]='heroImage' [alt]='hero.name' />
+<div *ngIf='hero' class='text-center'>
+  <img [src]='heroImage' [alt]='hero.name' class='m-auto' />
   <h2>{{ hero.name }}</h2>
 </div>
