--- a/forms/src/app/app.component.html
+++ b/forms/src/app/app.component.html
@@ -1,1 +1,11 @@
 <app-header />
+<main>
+  <article>
+    <h1
+      class='bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent text-center sm:text-5xl'
+    >
+      {{title.getTitle()}}
+    </h1>
+    <router-outlet></router-outlet>
+  </article>
+</main>
