--- a/forms/src/app/core/header/header.component.html
+++ b/forms/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<header class='bg-blue-950 text-white'>
+<header class='bg-blue-950 text-white mb-4'>
   <div class='mx-auto px-4 py-8 sm:px-6 sm:py-8 lg:px-8'>
     <div class='sm:flex sm:items-center sm:justify-between'>
       <div class='text-center sm:text-left'>
@@ -7,19 +7,20 @@
       </div>
 
       <div class='mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center'>
-        <nav class='[&_a]:mr-7 [&_a]:px-3 [&_a]:py-2 [&_a]:rounded-full'>
-          <a routerLinkActive='bg-white text-blue-950' routerLink='/' [routerLinkActiveOptions]='{ exact: true }'>
+        <nav class='[&_a]:mr-2 [&_a]:px-3 [&_a]:py-2 [&_a]:rounded-full'>
+          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/'
+             [routerLinkActiveOptions]='{ exact: true }'>
             Template-Driven Forms
           </a>
-          <a routerLinkActive='bg-white text-blue-950' routerLink='/reactive-forms'>Reactive Forms</a>
-          <a routerLinkActive='bg-white text-blue-950' routerLink='/custom-rating-picker'>Custom Rating Picker</a>
-          <a routerLinkActive='bg-white text-blue-950' routerLink='/custom-select'>Custom Select</a>
-          <a routerLinkActive='bg-white text-blue-950' routerLink='/dynamic-forms'>Dynamic Forms</a>
+          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/reactive-forms'>Reactive Forms</a>
+          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/custom-rating-picker'>Custom Rating Picker</a>
+          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/custom-select'>Custom Select</a>
+          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/dynamic-forms'>Dynamic Forms</a>
         </nav>
         <input
           type='text'
           placeholder='Global Search'
-          class='bg-transparent border border-gray-300 px-4 py-2 rounded-full'
+          class='bg-transparent outline outline-1 outline-white/50 px-4 py-2 rounded-full focus:outline-green-300'
         />
       </div>
     </div>
