style(forms): format files

--- a/forms/src/app/core/header/header.component.html
+++ b/forms/src/app/core/header/header.component.html
@@ -8,8 +8,7 @@
 
       <div class='mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center'>
         <nav class='[&_a]:mr-2 [&_a]:px-3 [&_a]:py-2 [&_a]:rounded-full'>
-          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/'
-             [routerLinkActiveOptions]='{ exact: true }'>
+          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/' [routerLinkActiveOptions]='{ exact: true }'>
             Template-Driven Forms
           </a>
           <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/reactive-forms'>Reactive Forms</a>
