--- a/forms/src/app/app.component.html
+++ b/forms/src/app/app.component.html
@@ -2,10 +2,12 @@
 <main>
   <article>
     <h1
-      class='bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent text-center sm:text-5xl'
+      class='bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent text-center sm:text-5xl mt-7 mb-10'
     >
       {{ title.getTitle() }}
     </h1>
-    <router-outlet></router-outlet>
+    <div class='max-w-screen-xl m-auto'>
+      <router-outlet></router-outlet>
+    </div>
   </article>
 </main>
