--- a/forms/src/app/template-forms/template-forms-page/template-forms-page.component.html
+++ b/forms/src/app/template-forms/template-forms-page/template-forms-page.component.html
@@ -1,1 +1,198 @@
-<p>template-forms-page works!</p>
+<form class='mt-8 grid grid-cols-6 gap-8'>
+  <div class='col-span-6 sm:col-span-2'>
+    <label
+      for='FirstName'
+      class='block text-sm font-medium text-gray-700'
+    >
+      First Name
+    </label>
+
+    <input
+      type='text'
+      id='FirstName'
+      name='first_name'
+      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+      placeholder='Enter your name'
+    />
+  </div>
+
+  <div class='col-span-6 sm:col-span-2'>
+    <label
+      for='LastName'
+      class='block text-sm font-medium text-gray-700'
+    >
+      Last Name
+    </label>
+
+    <input
+      type='text'
+      id='LastName'
+      name='last_name'
+      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+      placeholder='Enter your last name'
+    />
+  </div>
+
+  <div class='col-span-6 sm:col-span-2'>
+    <label for='Nickname' class='block text-sm font-medium text-gray-700'>
+      Nickname
+    </label>
+
+    <input
+      type='text'
+      id='Nickname'
+      name='nick_name'
+      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+      placeholder='Come up with a nickname'
+    />
+  </div>
+
+  <div class='col-span-6 sm:col-span-2'>
+    <label
+      for='Email'
+      class='block text-sm font-medium text-gray-700'
+    >
+      Email
+    </label>
+
+    <input
+      type='email'
+      id='Email'
+      name='email'
+      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+      placeholder='Provide your email'
+    />
+  </div>
+
+  <div class='col-span-6 sm:col-span-2'>
+    <label
+      for='YearOfBirth'
+      class='block text-sm font-medium text-gray-700'
+    >
+      Year of birth
+    </label>
+
+    <select name='year-of-birth' id='YearOfBirth'
+            class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'>
+      <option *ngFor='let year of years' [value]='year'>{{year}}</option>
+    </select>
+  </div>
+
+  <div class='col-span-6 sm:col-span-2'>
+    <label
+      for='Passport'
+      class='block text-sm font-medium text-gray-700'
+    >
+      Passport Number
+    </label>
+
+    <input
+      type='text'
+      id='Passport'
+      name='passport'
+      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+      placeholder='Provide Passport Data'
+    />
+  </div>
+
+  <fieldset class='grid grid-cols-6 gap-8 col-span-6 sm:col-span-6 border border-gray-200 p-2 pb-4'>
+    <legend class='px-2 text-gray-500'>Address</legend>
+
+    <div class='col-span-6 sm:col-span-2'>
+      <label
+        for='FullAddress'
+        class='block text-sm font-medium text-gray-700'
+      >
+        Full Address
+      </label>
+
+      <input
+        type='text'
+        id='FullAddress'
+        name='full-address'
+        class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+        placeholder='Street name and house number'
+      />
+    </div>
+
+    <div class='col-span-6 sm:col-span-2'>
+      <label
+        for='City'
+        class='block text-sm font-medium text-gray-700'
+      >
+        City
+      </label>
+
+      <input
+        type='text'
+        id='City'
+        name='city'
+        class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+        placeholder='City'
+      />
+    </div>
+
+    <div class='col-span-6 sm:col-span-2'>
+      <label
+        for='PostCode'
+        class='block text-sm font-medium text-gray-700'
+      >
+        PPost code
+      </label>
+
+      <input
+        type='text'
+        id='PostCode'
+        name='passport'
+        class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+        placeholder='Post code'
+      />
+    </div>
+  </fieldset>
+
+  <div class='col-span-6 sm:col-span-3'>
+    <label
+      for='Password'
+      class='block text-sm font-medium text-gray-700'
+    >
+      Password
+    </label>
+
+    <input
+      type='password'
+      id='Password'
+      name='password'
+      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+    />
+  </div>
+
+  <div class='col-span-6 sm:col-span-3'>
+    <label
+      for='PasswordConfirmation'
+      class='block text-sm font-medium text-gray-700'
+    >
+      Password Confirmation
+    </label>
+
+    <input
+      type='password'
+      id='PasswordConfirmation'
+      name='password_confirmation'
+      class='mt-1 w-full rounded-md border border-gray-400 bg-white text-sm text-gray-700 shadow-sm py-2 px-3'
+    />
+  </div>
+
+  <div class='col-span-6 sm:flex sm:items-center sm:justify-end sm:gap-4 mt-4'>
+    <button
+      class='inline-block shrink-0 rounded-md border border-gray-500 px-12 py-3 text-sm font-medium text-gray-600 transition hover:bg-transparent hover:text-gray-600 focus:outline-none focus:ring active:text-blue-500'
+    >
+      Create an account
+    </button>
+    <button
+      type='reset'
+      class='inline-block shrink-0 rounded-md border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-transparent hover:text-blue-600 focus:outline-none focus:ring active:text-blue-500'
+    >
+      Create an account
+    </button>
+  </div>
+</form>
