--- a/forms/src/app/core/header/header.component.html
+++ b/forms/src/app/core/header/header.component.html
@@ -7,14 +7,16 @@
       </div>
 
       <div class='mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center'>
-        <nav class='[&_a]:mr-2 [&_a]:px-3 [&_a]:py-2 [&_a]:rounded-full'>
-          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/' [routerLinkActiveOptions]='{ exact: true }'>
+        <nav class='[&_a]:mr-2 [&_a]:px-2 [&_a]:py-2 [&_a]:rounded-full'>
+          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/template-driven'
+             [routerLinkActiveOptions]='{ exact: true }'>
             Template-Driven Forms
           </a>
           <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/reactive-forms'>Reactive Forms</a>
           <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/custom-rating-picker'>Custom Rating Picker</a>
           <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/custom-select'>Custom Select</a>
           <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/dynamic-forms'>Dynamic Forms</a>
+          <a routerLinkActive='bg-green-300 text-blue-950' routerLink='/filters'>Advanced Filters</a>
         </nav>
         <input
           type='text'
