feat(forms): connect view and controller

--- a/forms/src/app/filters/filters.component.html
+++ b/forms/src/app/filters/filters.component.html
@@ -1,2 +1,2 @@
-<app-filter-group />
-<app-data-table />
+<app-filter-group (activeFilters)='filterData($event)' />
+<app-data-table [data]='movies' />
