--- a/forms/src/app/filters/data-table/data-table.component.html
+++ b/forms/src/app/filters/data-table/data-table.component.html
@@ -13,7 +13,7 @@
   </tr>
   </thead>
   <tbody class='[&_td]:whitespace-nowrap [&_td]:px-4 [&_td]:py-2 [&_td]:font-medium [&_td]:text-center'>
-  <tr *ngFor='let movie of movies'>
+  <tr *ngFor='let movie of data'>
     <td>{{ movie.id }}</td>
     <td>{{ movie.title }}</td>
     <td>{{ movie.language }}</td>
