refactor(forms): improve the implementation of conditions

--- a/forms/src/app/filters/data-table/data-table.component.html
+++ b/forms/src/app/filters/data-table/data-table.component.html
@@ -4,7 +4,7 @@
   >
   <tr>
     <th>Id</th>
-    <th>Title</th>
+    <th (click)='sorting()'>Title</th>
     <th>Language</th>
     <th>Genre</th>
     <th>Date</th>
